--- a/styles/ChickenStyle.css
+++ b/styles/ChickenStyle.css
@@ -4,8 +4,23 @@ h1{
     text-align: center;
     font-size: 50px;
 }
-img{
-    align-self: center;
-    align-content: center;
-    align-items: center;
+
+h2{
+    text-align: center;
+}
+
+body{
+    background-color: burlywood;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.aligner{
+    display: flex;
+    justify-content: center;
+    align-items:center;
+}
+
+strong,em{
+    color: crimson;
+
+
 }
